Koan CHANGELOG

* Fri Aug 17 2007 Michael DeHaan <mdehaan@redhat.com> - 0.6.1-1
- Bridged networking control options (--virt-bridge)
- avahi support (--server=DISCOVER)

* Thu Aug 09 2007 Michael DeHaan <mdehaan@redhat.com> - 0.6.0-1
- stable release
- don't check for libvirtd running if doesn't exist

* Thu Jul 26 2007 Michael DeHaan <mdehaan@redhat.com> - 0.5.2-1
- added XMLRPC version checking with cobbler server

* Fri Jul 20 2007 Michael DeHaan <mdehaan@redhat.com> - 0.5.1-1
- added qemu/kvm with --virt-type
- --virt-path support
- added --display to dump cobbler objects without taking action
- misc code & manpage cleanup

* Wed Jun 27 2007 Michael DeHaan <mdehaan@redhat.com> - 0.5.0-1
- Upgrades to take advantage of (and work with) Cobbler 0.5.0

* Thu May 31 2007 Michael DeHaan <mdehaan@redhat.com> - 0.4.0-1
- Change virt kernel/initrd download location to make SELinux happy

* Fri Apr 26 2007 Michael DeHaan <mdehaan@redhat.com> - 0.3.1-2
- Restore missing initrd build code for --replace-self
- Remove stray character from app.py

* Tue Apr 24 2007 Michael DeHaan <mdehaan@redhat.com> - 0.3.0-1
- Fix error with --system
- Fix IP vs MAC regex checking

* Thu Apr 19 2007 Michael DeHaan <mdehaan@redhat.com> - 0.2.9-1
- koan now speaks XMLRPC with cobbler (requires cobbler > 0.4.7-4)
- allow any RAM size >128MB.
- add --virtname option (see manpage)

* Fri Mar 23 2007 Michael DeHaan <mdehaan@redhat.com> - 0.2.8-3
- Remove redundant code for --virt-name handling.

* Wed Mar 14 2007 Michael DeHaan <mdehaan@redhat.com> - 0.2.7-1
- Use virtinst for installing Xen

* Thu Jan 24 2007 Michael DeHaan <mdehaan@redhat.com> - 0.2.6-1
- koan --list commands now sort output
- Added warning text when koan fails to import virtualization modules

* Fri Dec 08 2006 Michael DeHaan <mdehaan@redhat.com> - 0.2.5-1
- Now probes bootloader to determine what bootloader to edit, rather
  than using the first installed package.
