@@ -1,8 +1,10 @@
 Koan CHANGELOG
 
-* Fri Aug 17 2007 Michael DeHaan <mdehaan@redhat.com> - 0.6.1-1
+* Tue Aug 28 2007 Michael DeHaan <mdehaan@redhat.com> - 0.6.1-1
 - Bridged networking control options (--virt-bridge)
 - avahi support (--server=DISCOVER)
+- do not allow autodetection of mac with --virt
+- allow "xen" as alias for "xenpv" for --virt-type 
 
 * Thu Aug 09 2007 Michael DeHaan <mdehaan@redhat.com> - 0.6.0-1
 - stable release
